--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -42,10 +42,20 @@
 <!--        android:layout_width="200dp"-->
 <!--        android:layout_height="200dp"/>-->
 
-    <com.rengwuxian.con.custom_view_materialEditText.MaterialEditText
-        app:useFloatingLabel="true"
-        android:hint="UUUUUU"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
+<!--    <com.rengwuxian.con.custom_view_materialEditText.MaterialEditText-->
+<!--        app:useFloatingLabel="true"-->
+<!--        android:hint="UUUUUU"-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="wrap_content"/>-->
+
+<!--    <com.rengwuxian.con.custom_view_layoutProcess.OneHundredView-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="match_parent"-->
+<!--        android:background="@color/teal_200"/>-->
+
+    <com.rengwuxian.con.custom_view_layoutSize.CircleView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="@color/teal_200"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
