--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -53,9 +53,19 @@
 <!--        android:layout_height="match_parent"-->
 <!--        android:background="@color/teal_200"/>-->
 
-    <com.rengwuxian.con.custom_view_layoutSize.CircleView
+<!--    <com.rengwuxian.con.custom_view_layoutSize.CircleView-->
+<!--        android:layout_width="wrap_content"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:background="@color/teal_200"/>-->
+
+    <com.rengwuxian.con.custom_view_layoutLayout.ColoredTextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:background="@color/teal_200"/>
+        android:text="北京市" />
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <com.rengwuxian.con.custom_view_layoutLayout.ColoredTextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="天津市" />
+
+</LinearLayout>
